# modularity_in_NN

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
scripts/: __init__.py  analyze_results.py  run_sweep.py  test_sanity.py
src/: __init__.py  analysis.py  config.py  data.py  metrics.py  model.py  plotting.py  tasks.py  train.py  utils.py
tests/: __init__.py  test_data.py  test_metrics.py  test_tasks.py  test_train.py
