[project]
name = "modularity-repro"
version = "0.1.0"
description = "Reproduction of Johnston et al. modularity emergence in neural networks"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "torch>=2.0",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "pandas>=1.3",
    "tqdm>=4.60",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
